バリデーション実装③

--- a/forum2/forum2/src/main/resources/templates/commentEdit.html
+++ b/forum2/forum2/src/main/resources/templates/commentEdit.html
@@ -9,6 +9,9 @@
 <div class="header-contents">
     <h2>コメント編集</h2>
 </div>
+<div class="errorMessages">
+        <span th:text="${message}"/>
+</div>
 <div class="main-contents">
     <form th:action="@{/commentUpdate/{id}(id=${formModel.id})}" th:object="${formModel}" th:method="put">
         <div class="form-area">
