--- a/forum2/forum2/src/main/resources/templates/edit.html
+++ b/forum2/forum2/src/main/resources/templates/edit.html
@@ -6,23 +6,26 @@
     <title>編集</title>
 </head>
 <body>
-<div class="header-contents">
-    <h2>編集</h2>
-</div>
-<div class="main-contents">
-    <form th:action="@{/update/{id}(id=${formModel.id})}" th:object="${formModel}" th:method="put">
-        <div class="form-area">
-            <label>投稿内容</label>
-            <textarea class="tweet-box" name=content th:field="*{content}" size="20" maxlength="200" /></textarea><br/>
-            <input type="submit" value="更新" />
-        </div>
-    </form>
-</div>
-<div class="footer-contents">
-    <form action="/">
-        <input type="submit" value="戻る" />
-    </form>
-</div>
+    <div class="header-contents">
+        <h2>編集</h2>
+    </div>
+    <div class="errorMessages">
+        <span th:text="${message}"/>
+    </div>
+    <div class="main-contents">
+        <form th:action="@{/update/{id}(id=${formModel.id})}" th:object="${formModel}" th:method="put">
+            <div class="form-area">
+                <label>投稿内容</label>
+                <textarea class="tweet-box" name=content th:field="*{content}" size="20" maxlength="200" /></textarea><br/>
+                <input type="submit" value="更新" />
+            </div>
+        </form>
+    </div>
+    <div class="footer-contents">
+        <form action="/">
+            <input type="submit" value="戻る" />
+        </form>
+    </div>
 </body>
 </html>
 
