--- a/forum2/forum2/src/main/resources/templates/new.html
+++ b/forum2/forum2/src/main/resources/templates/new.html
@@ -6,23 +6,26 @@
   <title>新規投稿</title>
 </head>
 <body>
-<div class="header-contents">
-  <h2>新規投稿</h2>
-</div>
-<div class="main-contents">
-  <form method="post" action="/add" th:object="${formModel}">
-    <div class="form-area">
-      <label>投稿内容</label>
-      <textarea class="tweet-box" th:field="*{content}" size="20" maxlength="200" /></textarea><br/>
-      <input type="submit" value="投稿" />
-    </div>
-  </form>
-</div>
-<div class="footer-contents">
-  <form action="/">
-    <input type="submit" value="戻る" />
-  </form>
-</div>
+  <div class="header-contents">
+    <h2>新規投稿</h2>
+  </div>
+  <div class="errorMessages">
+    <span th:text="${message}"/>
+  </div>
+  <div class="main-contents">
+    <form method="post" action="/add" th:object="${formModel}">
+      <div class="form-area">
+        <label>投稿内容</label>
+        <textarea class="tweet-box" th:field="*{content}" size="20" maxlength="200" /></textarea><br/>
+        <input type="submit" value="投稿" />
+      </div>
+    </form>
+  </div>
+  <div class="footer-contents">
+    <form action="/">
+      <input type="submit" value="戻る" />
+    </form>
+  </div>
 </body>
 </html>
 
